--- a/styles/savedPasswords.css
+++ b/styles/savedPasswords.css
@@ -4,13 +4,42 @@
 }
 
 #savedPasswordsBox {
-    display: grid;
-    grid-template-columns: auto auto auto auto auto;
-    border: 1px solid black;
+    display: flex;
+    width: 30%;
+    flex-direction: column;
+    /* border: 1px solid #cdcbff; */
 }
 
 .savedPassword {
     margin: 10px;
     padding: 10px;
-    border: 1px solid black;
+    border-bottom: 1px solid #cdcbff;
+    display: flex;
+    flex-direction: column;
+}
+
+.savedPassword i {
+    cursor: pointer
+}
+
+.displayInfoContainer {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.displayInfoContainer i {
+    margin-left: 10px;
+}
+
+.displayPasswordDiv {
+    text-align: center;
+}
+
+.displayPasswordContainer {
+    text-align: center;
+}
+
+.d-none {
+    display: none;
 }
