--- a/styles/home.css
+++ b/styles/home.css
@@ -45,6 +45,7 @@ h3 {
 
 #passwordGenerated {
     background-color: white;
+    font-size: 16px;
     padding: 10px;
     border-radius: 15px;
     width: 100%;
