--- a/styles/savedPasswords.css
+++ b/styles/savedPasswords.css
@@ -13,13 +13,17 @@
 .savedPassword {
     margin: 10px;
     padding: 10px;
-    border-bottom: 1px solid #cdcbff;
+    border-bottom: 1px solid #EE5622;
     display: flex;
     flex-direction: column;
 }
 
+.savedPassword i:first-child {
+    color: #EE5622;
+}
+
 .savedPassword i {
-    cursor: pointer
+    cursor: pointer;
 }
 
 .displayInfoContainer {
